--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
     <!-- map all requests for /app/* to the dispatcher servlet -->
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/app/*</url-pattern>
+        <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
    
   
