--- a/pom.xml
+++ b/pom.xml
@@ -243,12 +243,12 @@
 			<version>${jackson.version}</version>
 	  </dependency>
 	  
-	  <dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>${jaxb-api.version}</version>
-			<scope>runtime</scope>
-		</dependency>
+<!-- 	  <dependency> -->
+<!-- 			<groupId>javax.xml.bind</groupId> -->
+<!-- 			<artifactId>jaxb-api</artifactId> -->
+<!-- 			<version>${jaxb-api.version}</version> -->
+<!-- 			<scope>runtime</scope> -->
+<!-- 		</dependency> -->
   
   
     
