--- a/pom.xml
+++ b/pom.xml
@@ -162,11 +162,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-<!--      <dependency> -->
-<!--             <groupId>javax.servlet</groupId> -->
-<!--             <artifactId>javax.servlet-api</artifactId> -->
-<!--             <scope>provided</scope> -->
-<!--      </dependency> -->
+     <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>test</scope>
+     </dependency>
     
     <dependency>
            <groupId>org.aspectj</groupId>
@@ -235,21 +236,14 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-  
-  
+                
+        
   	   <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 	  </dependency>
 	  
-<!-- 	  <dependency> -->
-<!-- 			<groupId>javax.xml.bind</groupId> -->
-<!-- 			<artifactId>jaxb-api</artifactId> -->
-<!-- 			<version>${jaxb-api.version}</version> -->
-<!-- 			<scope>runtime</scope> -->
-<!-- 		</dependency> -->
-  
   
     
   </dependencies>
